# MMD_CUDA

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cpptools/: clion_helper.h  mmd_cpu.cc  mmd_cpu.h  mmd_cpu_impl.h  mmd_cuda.cu  mmd_cuda.h  mmd_cuda_kernel_impl.h  mmd_cuda_linear.cu  mmd_cuda_rbf.cu  pybind11_interface.cc  pybind11_interface_cuda.cc  utils_cuda.cc  utils_cuda.h
examples/benchmark/: CMakeLists.txt  mmd_benchmark_cpu.cc  mmd_benchmark_cuda.cc  mmd_benchmark_cuda_mul.cc
examples/unit_test/: CMakeLists.txt  floating_point_error.cc  floating_point_error_mul.cc
